test/fails/bad_tags/decl6.lgl
tag a is vec2; // Can't subtype an untagged vector

void main() {
    print 1;
}
